--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ p {
     margin: 15px 30px 15px 60px;
     position: relative;
     font-size: 20px;
-    background-color: rgb(183, 241, 255);
+    background-color: #b7f1ff;
     padding: 15px;
     border-radius: 10px;
     width: fit-content;
@@ -76,6 +76,15 @@ p {
     width: 30px;
     height: 30px;
 }
+.output-messages .message:hover:after {
+    position: absolute;
+    content: '';
+    padding-left: 120px;
+    right: -60px;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
 
 .del {
     position: absolute;
@@ -88,6 +97,7 @@ p {
     top: 12px;
     border-radius: 15px;
     cursor: pointer;
+    z-index: 1;
 }
 .del:hover {
     box-shadow: 0 0 5px #949494;
