--- a/css/style.css
+++ b/css/style.css
@@ -49,41 +49,75 @@ p {
 }
 
 .output-messages ul {
+    display: flex;
+    flex-direction: column;
     list-style: none;
     margin-left: 5%;
     margin-right: 5%;
 }
 
-.output-messages .message {
-    margin: 15px 30px 15px 60px;
+.message {
     position: relative;
     font-size: 20px;
-    background-color: #b7f1ff;
     padding: 15px;
     border-radius: 10px;
     width: fit-content;
-    box-shadow: -5px 5px 5px #e2e2e2;
-    color: #474747;
 }
 
-.output-messages .message::before {
+.user {
+    background-color: #d0ffb7;
+    color: #474747;
+    margin: 15px 30px 15px 60px;
+    box-shadow: -5px 5px 5px #e2e2e2;
+}
+
+
+.server-response {
+    background-color: #b7f1ff;
+    color: #7b7b7b;
+    align-self: flex-end;
+    margin: 15px 60px 15px 30px;
+    box-shadow: 5px 5px 5px #e2e2e2;
+}
+
+.user::before,
+.server-response::after {
     position: absolute;
     content: '';
     background: url(../img/ok.png) no-repeat center center;
     background-size: 30px;
-    left: -60px;
     top: 12px;
     width: 30px;
     height: 30px;
 }
-.output-messages .message:hover:after {
+.user:hover:after,
+.server-response:hover::before {
     position: absolute;
     content: '';
-    padding-left: 120px;
-    right: -60px;
     top: 0;
     width: 100%;
     height: 100%;
+}
+
+.user:hover:after {
+    padding-left: 120px;
+    right: -60px;
+}
+.server-response:hover::before {
+    padding-right: 120px;
+    left: -60px;
+}
+.user::before {
+    left: -60px;
+}
+.user .del {
+    right: -50px;
+} 
+.server-response::after {
+    right: -60px;
+}
+.server-response .del {
+    left: -50px;
 }
 
 .del {
@@ -93,7 +127,6 @@ p {
     box-shadow: none;
     width: 30px;
     height: 30px;
-    right: -50px;
     top: 12px;
     border-radius: 15px;
     cursor: pointer;
@@ -158,4 +191,10 @@ p {
     background: #bbbbbb url(../img/inv_send.png) center center no-repeat;
     background-size: 80px;
     box-shadow: 0 0 10px 5px #bbbbbb;
+}
+
+@media screen and (min-height: 600px) and (max-height: 800px) {
+    .messenger {
+        height: 550px;
+    }
 }
